--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "socket.io": "^4.7.2"
   }
 }
